Added new validation attribute that enables to specify the minimum and maximum image width and height in pixels.

--- a/src/Chief2moro.ImageDataExtensions/Chief2moro.ImageDataExtensions.csproj
+++ b/src/Chief2moro.ImageDataExtensions/Chief2moro.ImageDataExtensions.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Orientation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequiredImageSizeAttribute.cs" />
+    <Compile Include="RequiredImageSizeRangeAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Chief2moro.ImageDataExtensions.nuspec" />
