--- a/src/Chief2moro.ImageDataExtensions.ImageResizer/Chief2moro.ImageDataExtensions.ImageResizer.csproj
+++ b/src/Chief2moro.ImageDataExtensions.ImageResizer/Chief2moro.ImageDataExtensions.ImageResizer.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Chief2moro.ImageDataExtensions.ImageResizer</RootNamespace>
     <AssemblyName>Chief2moro.ImageDataExtensions.ImageResizer</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
