--- a/src/Chief2moro.ImageDataExtensions.ImageResizer/Chief2moro.ImageDataExtensions.ImageResizer.nuspec
+++ b/src/Chief2moro.ImageDataExtensions.ImageResizer/Chief2moro.ImageDataExtensions.ImageResizer.nuspec
@@ -6,7 +6,7 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <projectUrl>https://github.com/markeverard/$id$</projectUrl>
+    <projectUrl>https://github.com/markeverard/Chief2moro.ImageDataExtensions</projectUrl>
     <iconUrl>http://www.markeverard.com/wp-content/uploads/2014/01/chief2moro.jpg</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
@@ -14,7 +14,7 @@
     <tags>EPiServer10 ImageResizer ImageData Resize Validation EPiServerAddOn ThirdPartyAddon</tags>
     <dependencies>
       <group targetFramework="net45">
-        <dependency id="Chief2moro.ImageDataExtensions" version="[2.0.0,3.0.0]" />
+        <dependency id="Chief2moro.ImageDataExtensions" version="[11.0.0,12.0.0]" />
         <dependency id="ImageResizer" version="[4.0.0,5.0.0]" />
       </group>
     </dependencies>
